adding baseline comparisons

--- a/baseline_comparison.ipynb
+++ b/baseline_comparison.ipynb
@@ -728,6 +728,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = {\"a\" : [1,2], \"b\": 0}\n",
+    "for x in A.keys():\n",
+    "    print(A[x])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 319,
    "metadata": {},
    "outputs": [
