adding aggregation of NPV for world bank regions of segments

--- a/plotsAndAnalysis_uncertaintyPropagation.ipynb
+++ b/plotsAndAnalysis_uncertaintyPropagation.ipynb
@@ -121,10 +121,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df0_05 = pd.read_csv(\"./output/results/globalnpv_SSP5_BRICK85_p05.csv\")\n",
+    "df0_50 = pd.read_csv(\"./output/results/globalnpv_SSP5_BRICK85_p50.csv\")\n",
+    "df0_95 = pd.read_csv(\"./output/results/globalnpv_SSP5_BRICK85_p95.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3915.2 4235.0 5556.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"{:0.1f} {:0.1f} {:0.1f}\".format(float(df0_05[\"npv\"]), float(df0_50[\"npv\"]), float(df0_95[\"npv\"])))"
+   ]
   },
   {
    "cell_type": "markdown",
