removing more unneeded files, updating directories in jupyter notebooks

--- a/plotsAndAnalysis_uncertaintyPropagation_SSP5-RCP85.ipynb
+++ b/plotsAndAnalysis_uncertaintyPropagation_SSP5-RCP85.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will save plots to  /Users/aewsma/codes/CIAM_adaptation_regimes/ciam-code/figures\n"
+      "Will save plots to  /Users/aewsma/codes/CIAM_uncertainty_propagation/ciam-code/figures\n"
      ]
     }
    ],
@@ -78,12 +78,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5th, 50th and 95th percentiles only (single simulations)"
+    "### 5th, 50th and 95th percentiles only (single simulations)\n",
+    "\n",
+    "If you generate new simulations, you will need to replace these directory paths and/or file names.\n",
+    "\n",
+    "Global NPV:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +97,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regional breakdown:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +116,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combine:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -244,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -575,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -642,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
