created directory for the uncertainty propagation ensembles, removed unused process_costs function

--- a/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
+++ b/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
@@ -310,14 +310,33 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# dfC = pd.read_csv(\"dfC.csv\")\n",
-    "# dfN = pd.read_csv(\"dfN.csv\")\n",
-    "# dfO = pd.read_csv(\"dfO.csv\")"
+    "If you obtained this code from Zenodo, you should have the files `dfC.csv`, `dfN.csv`, and `dfO.csv` in the same directory as this Jupyter notebook. Those are from the simulations presented in the study associated with this code repository."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully read previously processed results files. Skip ahead to `Time for some actual comparisons!`\n"
+     ]
+    }
+   ],
+   "source": [
+    "if os.path.isfile(\"dfC.csv\") and os.path.isfile(\"dfN.csv\") and os.path.isfile(\"dfO.csv\"):\n",
+    "    dfC = pd.read_csv(\"dfC.csv\")\n",
+    "    dfN = pd.read_csv(\"dfN.csv\")\n",
+    "    dfO = pd.read_csv(\"dfO.csv\")\n",
+    "    print(\"Successfully read previously processed results files. Skip ahead to `Time for some actual comparisons!`\")\n",
+    "else:\n",
+    "    print(\"Missing some/all processed results files. \\nNeed to run the time-consuming processing below in order to validate against GAMS CIAM implementation.\")"
    ]
   },
   {
