--- a/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation_SSP5-RCP85.ipynb
+++ b/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation_SSP5-RCP85.ipynb
@@ -37,8 +37,8 @@
    "outputs": [],
    "source": [
     "projdir = os.getcwd()\n",
-    "datdir = projdir + \"/ciam-code/output/MonteCarlo\"\n",
-    "plotdir = projdir + \"/ciam-code/figures\""
+    "datdir = projdir + \"/../ciam-code/output/MonteCarlo\"\n",
+    "plotdir = projdir + \"/../ciam-code/figures\""
    ]
   },
   {
@@ -57,7 +57,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will save plots to  /Users/aewsma/codes/CIAM_uncertainty_propagation/ciam-code/figures\n"
+      "Will save plots to  /Users/aewsma/codes/CIAM_uncertainty_propagation/work_uncertainty_propagation/../ciam-code/figures\n"
      ]
     }
    ],
@@ -353,7 +353,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ypcc = pd.read_csv(projdir+\"/ciam-code/data/ssp/ypcc_IIASAGDP_SSP5_v9_130219.csv\")\n",
+    "ypcc = pd.read_csv(projdir+\"/../ciam-code/data/ssp/ypcc_IIASAGDP_SSP5_v9_130219.csv\")\n",
     "dfGP = pd.DataFrame()\n",
     "dfGP[\"rgn\"] = ypcc.columns[1:]\n",
     "dfGP[\"gdp_per_capita\"] = np.array(ypcc.iloc[0][1:])"
@@ -372,7 +372,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pop = pd.read_csv(projdir+\"/ciam-code/data/ssp/pop_IIASAGDP_SSP5_v9_130219.csv\")\n",
+    "pop = pd.read_csv(projdir+\"/../ciam-code/data/ssp/pop_IIASAGDP_SSP5_v9_130219.csv\")\n",
     "dfGP[\"pop\"] = np.array(pop.iloc[0][1:])"
    ]
   },
@@ -409,7 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wbsegs = pd.read_csv(projdir+\"/ciam-code/data/segments_regions_WB.csv\")\n",
+    "wbsegs = pd.read_csv(projdir+\"/../ciam-code/data/segments_regions_WB.csv\")\n",
     "regions = list(wbsegs[\"global region\"].unique())\n",
     "rgn_gdp = {}\n",
     "for rgn in regions:\n",
