prepping for updated results figures and anlaysis

--- a/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
+++ b/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1480,7 +1480,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Some numbers for the paper\n",
+    "# Useful numbers for the paper\n",
     "\n",
     "## Raw numbers\n",
     "\n",
