--- a/work_uncertainty_propagation/sensitivity_analysis.ipynb
+++ b/work_uncertainty_propagation/sensitivity_analysis.ipynb
@@ -85,10 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
+    "surge_option = 1\n",
     "scenarios = [(1,26),(2,45),(4,60),(5,85)]\n",
     "dfSi = {scen : None for scen in scenarios}"
    ]
@@ -134,43 +135,177 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 141,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movefactor</th>\n",
+       "      <th>dvbm</th>\n",
+       "      <th>vslel</th>\n",
+       "      <th>vslmult</th>\n",
+       "      <th>wvel</th>\n",
+       "      <th>wvpdl</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2.737932</td>\n",
+       "      <td>2.864736</td>\n",
+       "      <td>0.423844</td>\n",
+       "      <td>203.400648</td>\n",
+       "      <td>1.984252</td>\n",
+       "      <td>0.401850</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.146398</td>\n",
+       "      <td>4.689004</td>\n",
+       "      <td>0.460670</td>\n",
+       "      <td>172.968618</td>\n",
+       "      <td>1.024534</td>\n",
+       "      <td>0.529294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.210031</td>\n",
+       "      <td>5.899834</td>\n",
+       "      <td>0.315121</td>\n",
+       "      <td>170.584669</td>\n",
+       "      <td>0.940749</td>\n",
+       "      <td>0.587431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.518711</td>\n",
+       "      <td>4.077409</td>\n",
+       "      <td>0.294079</td>\n",
+       "      <td>126.846041</td>\n",
+       "      <td>1.413168</td>\n",
+       "      <td>0.545942</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2.410799</td>\n",
+       "      <td>10.744820</td>\n",
+       "      <td>0.207871</td>\n",
+       "      <td>110.392481</td>\n",
+       "      <td>1.155614</td>\n",
+       "      <td>0.514876</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   movefactor       dvbm     vslel     vslmult      wvel     wvpdl\n",
+       "0    2.737932   2.864736  0.423844  203.400648  1.984252  0.401850\n",
+       "1    1.146398   4.689004  0.460670  172.968618  1.024534  0.529294\n",
+       "2    1.210031   5.899834  0.315121  170.584669  0.940749  0.587431\n",
+       "3    1.518711   4.077409  0.294079  126.846041  1.413168  0.545942\n",
+       "4    2.410799  10.744820  0.207871  110.392481  1.155614  0.514876"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfPC.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* dvbm = FUND value of OECD dryland per Darwin et al 1995 converted from $1995 ($2010M per sqkm) (5.376)\n",
+    "* wvel = income elasticity of wetland value (1.16) (Brander et al, 2006)\n",
+    "* movefactor = Cost to relocate mobile capital as a fraction of asset value (0.1)\n",
+    "* vslel = Elasticity of vsl (0.5) (only used for endogenous calculation of vsl)\n",
+    "* vslmult = multiplier on USA GDP (216)(only used for endogenous calculation of vsl)\n",
+    "* wvpdl = Population density elasticity of wetland value (0.47) (Brander et al, 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            names            mu       mu_star        sigma  mu_star_conf\n",
-      "52           dvbm  20865.925264  20865.925264  4707.448331   2174.504411\n",
-      "55           wvel  -6397.141074   6897.025572  4503.671847   1845.380688\n",
-      "51     movefactor   4401.768241   5809.152771  5191.314539   1299.178027\n",
-      "41   antarctic_nu   1139.978823   5579.200261  6404.326571   1468.616396\n",
-      "1   sd_ocean_heat   1973.731747   5564.707463  7003.876043   2165.183714\n",
-      "            names            mu       mu_star         sigma  mu_star_conf\n",
-      "52           dvbm  28811.355640  28811.355640   7230.646753   3336.341311\n",
-      "55           wvel -15221.987268  15221.987268   8607.620531   3771.097460\n",
-      "10  rho_greenland  -5220.932414   9878.052951  10754.330271   3156.911226\n",
-      "35     glaciers_n   3373.282165   9431.425947  12671.743427   4042.874221\n",
-      "4    sd_antarctic  -3642.185622   8809.304739   9264.473685   1690.345115\n",
-      "             names            mu       mu_star         sigma  mu_star_conf\n",
-      "52            dvbm  25610.843217  25610.843217   6171.300329   2423.839881\n",
-      "55            wvel -11220.328503  11557.001703   7854.430529   3177.284404\n",
-      "40    antarctic_mu   -275.833275   8357.509203  10725.078087   2981.987327\n",
-      "8   rho_ocean_heat   4339.137397   7584.727015   8066.177897   2179.666391\n",
-      "3     sd_greenland  -1547.167318   7391.327086  10311.528489   3412.656092\n",
-      "                names            mu       mu_star         sigma  mu_star_conf\n",
-      "52               dvbm  50566.550939  50566.550939  13379.369614   6744.822448\n",
-      "55               wvel -27459.723026  27459.723026   9775.805329   4709.938138\n",
-      "51         movefactor  12756.617520  16578.579536  13805.326037   4090.364783\n",
-      "22       antarctic_s0  -3998.754630  15603.042455  19012.708158   4916.301845\n",
-      "42  antarctic_precip0   3864.429685  14747.259195  17352.267298   4245.514490\n"
+      "                       names       mu_star\n",
+      "52                      dvbm  20865.925264\n",
+      "55                      wvel   6897.025572\n",
+      "51                movefactor   5809.152771\n",
+      "41              antarctic_nu   5579.200261\n",
+      "1              sd_ocean_heat   5564.707463\n",
+      "45  antarctic_runoff_height0   5388.506925\n",
+      "13                alpha0_CO2   5221.768109\n",
+      "56                     wvpdl   5184.026472\n",
+      "49          antarctic_lambda   5163.351064\n",
+      "19              greenland_v0   5106.884970\n",
+      "            names       mu_star\n",
+      "52           dvbm  28811.355640\n",
+      "55           wvel  15221.987268\n",
+      "10  rho_greenland   9878.052951\n",
+      "35     glaciers_n   9431.425947\n",
+      "4    sd_antarctic   8809.304739\n",
+      "56          wvpdl   8513.566105\n",
+      "51     movefactor   8009.738667\n",
+      "15          N2O_0   7823.697573\n",
+      "37      anto_beta   7821.808385\n",
+      "41   antarctic_nu   7805.483979\n",
+      "             names       mu_star\n",
+      "52            dvbm  25610.843217\n",
+      "55            wvel  11557.001703\n",
+      "40    antarctic_mu   8357.509203\n",
+      "8   rho_ocean_heat   7584.727015\n",
+      "3     sd_greenland   7391.327086\n",
+      "31     greenland_b   7227.813707\n",
+      "37       anto_beta   6949.490856\n",
+      "51      movefactor   6602.778458\n",
+      "1    sd_ocean_heat   6581.040066\n",
+      "4     sd_antarctic   6542.273038\n",
+      "                       names       mu_star\n",
+      "52                      dvbm  50566.550939\n",
+      "55                      wvel  27459.723026\n",
+      "51                movefactor  16578.579536\n",
+      "22              antarctic_s0  15603.042455\n",
+      "42         antarctic_precip0  14747.259195\n",
+      "4               sd_antarctic  14202.493012\n",
+      "45  antarctic_runoff_height0  14102.321853\n",
+      "14                     CO2_0  13713.303434\n",
+      "56                     wvpdl  13552.561337\n",
+      "54                   vslmult  13096.740555\n"
      ]
     }
    ],
    "source": [
     "for scen in scenarios:\n",
-    "    print(dfSi[scen].sort_values(by=\"mu_star\", ascending=False)[:5])"
+    "    print(dfSi[scen].sort_values(by=\"mu_star\", ascending=False)[[\"names\",\"mu_star\"]][:10])"
    ]
   },
   {
