updating zenodo repo for brick projections

--- a/brick_projections.ipynb
+++ b/brick_projections.ipynb
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "brickfile = \"https://zenodo.org/record/6461560/files/sneasybrick_projections_csv.zip\"\n",
+    "brickfile = \"https://zenodo.org/record/6626335/files/sneasybrick_projections_csv.zip\"\n",
     "results_dir = getcwd()+\"/ciam-code/data/lslr/\""
    ]
   },
@@ -41,8 +41,8 @@
    "outputs": [],
    "source": [
     "rcp_scenarios = [\"RCP26\",\"RCP45\",\"RCP60\",\"RCP85\"]\n",
-    "filepaths_gmsl = {rcp : results_dir+\"projections_csv/\"+rcp+\"/projections_gmsl_\"+rcp+\"_sneasybrick_20M_19-02-2022.csv\" for rcp in rcp_scenarios}\n",
-    "filepaths_map = {rcp : results_dir+\"projections_csv/\"+rcp+\"/projections_MAP_\"+rcp+\"_sneasybrick_20M_19-02-2022.csv\" for rcp in rcp_scenarios}\n"
+    "filepaths_gmsl = {rcp : results_dir+\"projections_csv/\"+rcp+\"/projections_gmsl_\"+rcp+\"_sneasybrick.csv\" for rcp in rcp_scenarios}\n",
+    "filepaths_map = {rcp : results_dir+\"projections_csv/\"+rcp+\"/projections_MAP_\"+rcp+\"_sneasybrick.csv\" for rcp in rcp_scenarios}\n"
    ]
   },
   {
