updated baseline comparisons

--- a/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation.ipynb
+++ b/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation.ipynb
@@ -4,14 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Plots and analysis for Monte Carlo ensembles, SSP5-RCP8.5\n",
+    "# Plots and analysis for Monte Carlo ensembles\n",
     "\n",
-    "Corresponds to the main text results."
+    "Corresponds to the main text results, including:\n",
+    "* SSP1-RCP2.6\n",
+    "* SSP2-RCP4.5\n",
+    "* SSP4-RCP6.0\n",
+    "* SSP5-RCP8.5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
