--- a/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
+++ b/work_baseline_comparisons/plotsAndAnalysis_baselineComparisons.ipynb
@@ -1200,7 +1200,7 @@
     "ax[1].set_xticks(range(2010,2110,10)); ax[1].set_xticklabels([\"\",2020,\"\",2040,\"\",2060,\"\",2080,\"\",2100], fontsize=12)\n",
     "ax[1].set_xlabel(\"Year\", fontsize=12); ax[1].set_ylabel(\"Annual Least-Cost\\n(billion 2010$US)\", fontsize=12)\n",
     "ylims = ax[1].get_ylim(); top = ylims[1]*1.02; ax[1].text(2005,top, panels[pan], fontsize=12);\n",
-    "fig.savefig(plotdir+\"/baseline_comparison_breakdown_rcp85.pdf\", bbox_inches='tight');"
+    "fig.savefig(plotdir+\"/baseline_comparison_breakdown_rcp85.pdf\", bbox_inches='tight');\n"
    ]
   },
   {
