--- a/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation.ipynb
+++ b/work_uncertainty_propagation/plotsAndAnalysis_uncertaintyPropagation.ipynb
@@ -769,27 +769,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h1 style=\"color:firebrick;font-size:40pt\">HERE NOW</h1>"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -986,7 +965,9 @@
   {
    "cell_type": "code",
    "execution_count": 279,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1181,6 +1162,41 @@
     "        print(\"  SE-only ensemble:    \",np.round([dfC[scen][\"npv/gpd \"+rgn].quantile(.05), dfC[scen][\"npv/gpd \"+rgn].quantile(.5), dfC[scen][\"npv/gpd \"+rgn].quantile(.95), dfC[scen][\"npv/gpd \"+rgn].quantile(.95)-dfC[scen][\"npv/gpd \"+rgn].quantile(.05)], 2))\n",
     "        print(\"  SLR and SE ensemble: \",np.round([dfSC[scen][\"npv/gpd \"+rgn].quantile(.05), dfSC[scen][\"npv/gpd \"+rgn].quantile(.5), dfSC[scen][\"npv/gpd \"+rgn].quantile(.95), dfSC[scen][\"npv/gpd \"+rgn].quantile(.95)-dfSC[scen][\"npv/gpd \"+rgn].quantile(.05)], 2))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h1 style=\"color:firebrick;font-size:40pt\">HERE NOW</h1>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
